# Lox-AST

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  plox.cpp
.cache/clangd/index/: Lox.cpp.23611492917F0C77.idx  Lox.hpp.256AAC5235BE8D74.idx  Scanner.cpp.C99D5A191E283387.idx  Scanner.hpp.7B2BB3B5BBE57A2A.idx  Token.cpp.3B2CD7DFA9B41BF0.idx  Token.hpp.8F7B3754E51B58A0.idx  TokenType.hpp.5E6039456B2AFE7B.idx  main.cpp.5FFEA50C9A50260D.idx
include/lox/: Lox.hpp  errors.h
include/plox/: Lox.hpp  Parser.hpp  Scanner.hpp  Token.hpp  TokenType.hpp
include/plox/Expr/: Expr.hpp  ExprVisitor.hpp
src/: CMakeLists.txt  Lox.cpp  Parser.cpp  Scanner.cpp  Token.cpp  Token.hpp  TokenType.hpp  main.cpp
src/Expr/: CMakeLists.txt
